308 ==> 293335 - GPX file without time stamps reports no datapoints.
309 ==> 432531 - After running DB maintenance digiKam won't start can't connect to DB then crashes.
310 ==> 432878 - Rendering Intents options cannot be translated in Color Management Configuration page.
311 ==> 432732 - Wish: Support wildcards in text filter.
312 ==> 398376 - UI problems making face management very hard.
313 ==> 384614 - Digikam redeye does not work on some images.
314 ==> 390487 - Open in File Manager function enhancement.
315 ==> 401941 - Beta3 / beta2 launches but hangs... Now fear for DB!
316 ==> 400941 - Crash with segmentation fault when writing a large amount of metadata to images.
317 ==> 341510 - Imported GPX Files generate an error when GPX-File contains 'unusual' tags.
318 ==> 432789 - Imported Pictures (RAW, CR3, Canon M6 Mark II) doesn´t have the rigth Rotation.
319 ==> 432957 - Some tags appear beneath "People" parent tag in People view/panel.
320 ==> 430761 - Windows digikam.exe application icon missing.
321 ==> 433060 - Inconsistency between metadata displayed and metadata taken in account to rename.
322 ==> 433183 - Migrate from "MySQL Server" database corrupts face/people metadata.
323 ==> 433172 - Files do not disappear if cut.
324 ==> 433264 - Patch for missing QPainterPath in qtavcodecs.cpp.
325 ==> 431951 - UI lockup for upwards of 15 seconds while just scrolling album views and selecting images.
326 ==> 432257 - Spinning Pinwheel Scrolling through Thumbnails.
327 ==> 433350 - 'reread metadata from file' don't clean up ImageProperties table if the related fields don't exist anymore in the file.
328 ==> 433311 - New or modified root album folders are always placed into local collections (= Type No 1 in table album roots).
329 ==> 183103 - Allow to change Presentation tool delay on the fly [patch].
330 ==> 433331 - Display Thumbnails greater than 9080 missing with removable disk Off line (Ok On Line).
331 ==> 